<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center"
    tools:context=".CreditCalculator.CreditCostActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent5"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/balanceLabel"
            android:text="@string/balance"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <EditText
            android:hint="@string/balance_enter"
            android:id="@+id/balanceInput"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/interestRateLabel"
            android:text="@string/interestRate"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <EditText
            android:hint="@string/interestRate_enter"
            android:id="@+id/interestRateInput"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textSize="20sp"

            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/monthlyPayment"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <EditText
            android:hint="@string/monthlyPayment_enter"
            android:id="@+id/monthlyPaymentInput"
            android:layout_weight="1"
            android:textSize="20sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/years"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <Spinner
            android:id="@+id/year_number"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center_horizontal|center"
            android:text="Calculate"
            android:onClick="calculate"
            android:background="@color/accent9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </LinearLayout>

    </LinearLayout>
</LinearLayout>