<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/coordinatorLayoutPortfolio"

    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/accent6"
    tools:context=".Portfolio.PortfolioActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textAlignment="center"
            android:text="@string/portfolio"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/balanceid"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/balance"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/porthint"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/portfolioHint"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/ownedStockRecyclerView">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
